# devops-study-app

./: .release-please-manifest.json
.github/workflows/: backend-tests.yaml  docker-build-push.yaml  e2e-tests.yaml  frontend-tests.yaml  release-please.yaml  update-gitops.yaml
src/backend/: CHANGELOG.md  pyproject.toml
src/backend/src/backend/: main.py
src/frontend/: CHANGELOG.md  pyproject.toml
