[project]
name = "study-tracker-frontend"
version = "0.2.2"
description = "Frontend for DevOps Study Tracker application"
readme = "README.md"
authors = [{ name = "Abdul Shukor", email = "Abdul@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["flask>=3.1.2", "requests>=2.32.5"]

[project.scripts]
study-tracker-frontend = "frontend.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/frontend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=8.4.1",
  "pytest-cov>=6.2.1",
  "responses>=0.25.8",
  "ruff>=0.12.11",
]
